--- a/src/components/phonebook/PhonebookMain.module.css
+++ b/src/components/phonebook/PhonebookMain.module.css
@@ -1,13 +1,19 @@
-.contacts {
-  font-size: 24px;
-  line-height: 1.4;
-  list-style-type: circle;
+.form {
+  background: rgb(167, 146, 102);
+  display: flex;
+  flex-direction: column;
+  border: solid 3px grey;
+  border-radius: 8px;
+  height: 300px;
+  width: 400px;
+  padding: 20px;
+  font-size: 30px;
 }
 
 .input {
   width: 300px;
   margin: 20px 0;
-  font-size: 30px;
+  font-size: 22px;
   color: rgba(0, 0, 0, 0.7);
 
   border: solid 2px grey;
@@ -26,6 +32,6 @@
 
 .btn:hover,
 .btn:focus {
-  background: rgb(167, 146, 102);
+  background: rgb(145, 111, 72);
   color: white;
 }
